chore: prepare packages for npm publishing
- Add package.json metadata: license, repository, keywords, engines, files
- Add exports/main/types fields for ESM consumers
- Add prepublishOnly scripts to ensure builds before publish
- Add README.md for each package with usage examples and API docs
- Add MIT LICENSE to root and each package
- Add root README.md with project overview and quick start
- Update SPECIFICATION.md with publishing instructions
- Change internal workspace deps from * to ^0.1.0 for npm compat

--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "mcp-hub",
   "private": true,
+  "description": "Universal installer and configuration tool for MCP servers across all AI applications",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mcp-hub/mcp-hub.git"
+  },
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces"
+    "build": "npm run build --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present",
+    "clean": "rimraf packages/*/dist packages/web/.next"
   },
   "devDependencies": {
     "typescript": "^5.7.0",
