--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -11,12 +11,40 @@
       "import": "./dist/index.js"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "registry",
+    "server-directory",
+    "github-mcp",
+    "filesystem-mcp",
+    "brave-search-mcp"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mcp-hub/mcp-hub.git",
+    "directory": "packages/registry"
+  },
+  "homepage": "https://github.com/mcp-hub/mcp-hub/tree/main/packages/registry#readme",
+  "bugs": {
+    "url": "https://github.com/mcp-hub/mcp-hub/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@mcp-hub/core": "*"
+    "@mcp-hub/core": "^0.1.0"
   }
 }
