--- a/packages/generators/package.json
+++ b/packages/generators/package.json
@@ -11,12 +11,45 @@
       "import": "./dist/index.js"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "prepublishOnly": "npm run build"
+  },
+  "keywords": [
+    "mcp",
+    "model-context-protocol",
+    "config-generator",
+    "claude-desktop",
+    "cursor",
+    "vscode",
+    "windsurf",
+    "cline",
+    "roo-code",
+    "goose",
+    "opencode",
+    "zed"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mcp-hub/mcp-hub.git",
+    "directory": "packages/generators"
+  },
+  "homepage": "https://github.com/mcp-hub/mcp-hub/tree/main/packages/generators#readme",
+  "bugs": {
+    "url": "https://github.com/mcp-hub/mcp-hub/issues"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
-    "@mcp-hub/core": "*"
+    "@mcp-hub/core": "^0.1.0"
   }
 }
