--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,7 @@
     "@mcp-hub/core": "*",
     "@mcp-hub/generators": "*",
     "@mcp-hub/registry": "*",
-    "lightningcss-win32-x64-msvc": "^1.31.1",
+    "lightningcss": "^1.30.0",
     "next": "^15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
