chore: rename npm scope from @mcp-hub to @getmcp
- Rename all packages: @mcp-hub/* → @getmcp/*
- Rename CLI binary: mcp-hub → getmcp
- Update repository URLs to github.com/RodrigoTomeES/getmcp
- Update all imports, doc comments, READMEs, and SPECIFICATION.md
- Update web branding (layout, titles, footer, GitHub link)
- All 139 tests pass, all 5 packages build successfully

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "mcp-hub",
+  "name": "getmcp",
   "private": true,
   "description": "Universal installer and configuration tool for MCP servers across all AI applications",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcp-hub/mcp-hub.git"
+    "url": "https://github.com/RodrigoTomeES/getmcp.git"
   },
   "workspaces": [
     "packages/*"
