--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@mcp-hub/cli",
+  "name": "@getmcp/cli",
   "version": "0.1.0",
   "description": "CLI tool to install MCP servers into any AI application with one command",
   "type": "module",
   "bin": {
-    "mcp-hub": "./dist/bin.js"
+    "getmcp": "./dist/bin.js"
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -44,20 +44,20 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcp-hub/mcp-hub.git",
+    "url": "https://github.com/RodrigoTomeES/getmcp.git",
     "directory": "packages/cli"
   },
-  "homepage": "https://github.com/mcp-hub/mcp-hub/tree/main/packages/cli#readme",
+  "homepage": "https://github.com/RodrigoTomeES/getmcp/tree/main/packages/cli#readme",
   "bugs": {
-    "url": "https://github.com/mcp-hub/mcp-hub/issues"
+    "url": "https://github.com/RodrigoTomeES/getmcp/issues"
   },
   "engines": {
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@mcp-hub/core": "^0.1.0",
-    "@mcp-hub/generators": "^0.1.0",
-    "@mcp-hub/registry": "^0.1.0",
+    "@getmcp/core": "^0.1.0",
+    "@getmcp/generators": "^0.1.0",
+    "@getmcp/registry": "^0.1.0",
     "@inquirer/prompts": "^7.0.0"
   }
 }
