--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mcp-hub/core",
+  "name": "@getmcp/core",
   "version": "0.1.0",
   "description": "Core types, schemas, and validation for MCP Hub canonical configuration format",
   "type": "module",
@@ -34,12 +34,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcp-hub/mcp-hub.git",
+    "url": "https://github.com/RodrigoTomeES/getmcp.git",
     "directory": "packages/core"
   },
-  "homepage": "https://github.com/mcp-hub/mcp-hub/tree/main/packages/core#readme",
+  "homepage": "https://github.com/RodrigoTomeES/getmcp/tree/main/packages/core#readme",
   "bugs": {
-    "url": "https://github.com/mcp-hub/mcp-hub/issues"
+    "url": "https://github.com/RodrigoTomeES/getmcp/issues"
   },
   "engines": {
     "node": ">=22.0.0"
