--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@getmcp/core",
   "version": "0.1.0",
-  "description": "Core types, schemas, and validation for MCP Hub canonical configuration format",
+  "description": "Core types, schemas, and validation for getmcp canonical configuration format",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
