fix: add @types/node to core and cli for Vercel build compatibility

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,5 +59,8 @@
     "@getmcp/generators": "^0.1.0",
     "@getmcp/registry": "^0.1.0",
     "@inquirer/prompts": "^7.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.0"
   }
 }
