--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "build": "npm run build -w @getmcp/core && npm run build -w @getmcp/generators && npm run build -w @getmcp/registry && npm run build -w @getmcp/cli && npm run build -w @getmcp/web",
     "test": "npm run test --workspaces --if-present",
     "lint": "npm run lint --workspaces --if-present",
-    "clean": "rimraf packages/*/dist packages/*/tsconfig.tsbuildinfo packages/web/.next"
+    "clean": "rimraf packages/*/dist packages/*/tsconfig.tsbuildinfo packages/web/.next",
+    "fetch-repos": "tsx scripts/fetch-mcp-repos.ts"
   },
   "devDependencies": {
+    "@types/node": "^24.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.0",
-    "vitest": "^3.0.0",
-    "@types/node": "^24.0.0"
+    "vitest": "^3.0.0"
   }
 }
