feat: migrate to Vitest 4 with unified projects config and V8 coverage
Upgrade vitest from ^3.0.0 to ^4.0.0 and consolidate test configuration.
Replace per-package vitest configs and npm workspace fan-out with a single
root vitest.config.ts using Vitest 4's projects feature. Add @vitest/coverage-v8
for code coverage support.

--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   ],
   "scripts": {
     "build": "npm run build -w @getmcp/core && npm run build -w @getmcp/generators && npm run build -w @getmcp/registry && npm run build -w @getmcp/cli && npm run build -w @getmcp/web",
-    "test": "npm run test --workspaces --if-present",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "lint": "npm run lint --workspaces --if-present",
     "clean": "rimraf packages/*/dist packages/*/tsconfig.tsbuildinfo packages/web/.next",
     "fetch-repos": "tsx scripts/fetch-mcp-repos.ts"
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "tsx": "^4.21.0",
     "typescript": "^5.7.0",
-    "vitest": "^3.0.0"
+    "vitest": "^4.0.0"
   }
 }
