--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "scripts": {
     "build": "npm run build -w @getmcp/core && npm run build -w @getmcp/generators && npm run build -w @getmcp/registry && npm run build -w @getmcp/cli && npm run build -w @getmcp/web",
+    "website": "npm run dev -w @getmcp/web",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "lint": "npm run lint --workspaces --if-present",
