--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,7 +57,9 @@
     "@getmcp/core": "^0.1.0",
     "@getmcp/generators": "^0.1.0",
     "@getmcp/registry": "^0.1.0",
-    "@inquirer/prompts": "^7.0.0"
+    "@inquirer/prompts": "^7.0.0",
+    "smol-toml": "^1.6.0",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/node": "^24.0.0"
