--- a/packages/generators/package.json
+++ b/packages/generators/package.json
@@ -49,6 +49,8 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@getmcp/core": "^0.1.0"
+    "@getmcp/core": "^0.1.0",
+    "smol-toml": "^1.6.0",
+    "yaml": "^2.8.2"
   }
 }
