--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -53,6 +53,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@getmcp/core": "^0.1.0",
     "@getmcp/generators": "^0.1.0",
