--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "zod": "^3.24.0"
   },
