--- a/packages/generators/package.json
+++ b/packages/generators/package.json
@@ -48,6 +48,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@getmcp/core": "^0.1.0",
     "smol-toml": "^1.6.0",
