--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -43,6 +43,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@getmcp/core": "^0.1.0"
   }
