feat: add CLI entry point for @getmcp in package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "website": "npm run dev -w @getmcp/web",
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "lint": "npm run lint --workspaces --if-present"
+    "lint": "npm run lint --workspaces --if-present",
+    "@getmcp": "npx tsx packages/cli/src/bin.ts"
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
