--- a/packages/generators/package.json
+++ b/packages/generators/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@getmcp/generators",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Config generators that transform canonical MCP server definitions to app-specific formats",
   "type": "module",
   "main": "./dist/index.js",
@@ -38,7 +38,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RodrigoTomeES/getmcp.git",
+    "url": "git+https://github.com/RodrigoTomeES/getmcp.git",
     "directory": "packages/generators"
   },
   "homepage": "https://github.com/RodrigoTomeES/getmcp/tree/main/packages/generators#readme",
