--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.0"
   }
