feat: implement remove and update commands with non-interactive and dry-run support
- Refactor remove command to use @clack/prompts for user interaction.
- Add support for --yes and --dry-run flags in remove command.
- Introduce update command to regenerate and merge configs for tracked installations.
- Implement error handling with custom error classes for better user feedback.
- Create lock file management for tracking installations and removals.
- Add utility functions for path shortening and flag parsing.
- Enhance tests for error handling, lock file operations, and utility functions.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -57,10 +57,10 @@
     "access": "public"
   },
   "dependencies": {
+    "@clack/prompts": "^1.0.1",
     "@getmcp/core": "^0.1.0",
     "@getmcp/generators": "^0.1.0",
     "@getmcp/registry": "^0.1.0",
-    "@inquirer/prompts": "^7.0.0",
     "smol-toml": "^1.6.0",
     "yaml": "^2.8.2"
   },
