fix: add --target option to GitHub release command for accurate tagging

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -242,4 +242,5 @@ jobs:
           gh release create "$TAG" \
             --title "$TAG" \
             --notes "$BODY" \
+            --target "$(git rev-parse HEAD)" \
             --latest
