--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,7 +59,8 @@
     "@getmcp/generators": "*",
     "@getmcp/registry": "*",
     "smol-toml": "^1.6.0",
-    "yaml": "^2.8.2"
+    "yaml": "^2.8.2",
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^24.0.0"
